pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-basicauth-empty-secret.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-basicauth-empty-secret
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret-type: "auth-map"
    nginx.ingress.kubernetes.io/auth-secret: "default/empty-basic-auth"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /basicauth-empty
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
kind: Secret
apiVersion: v1
metadata:
  name: empty-basic-auth
  namespace: default
type: Opaque
data: {}
